--- a/Task_1_screenLayout/app/src/main/AndroidManifest.xml
+++ b/Task_1_screenLayout/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Task_1_screenLayout"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".screens.SignInScreen"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Task_1_screenLayout">
