--- a/Coffee shop/app/src/main/AndroidManifest.xml
+++ b/Coffee shop/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.CoffeeShop"
         tools:targetApi="31">
         <activity
-            android:name=".screens.SignInScreen"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CoffeeShop"
